--- a/src/scss/layouts/_pag22.scss
+++ b/src/scss/layouts/_pag22.scss
@@ -48,11 +48,11 @@
         margin-top: 3%;
         text-align: center;
         .cuadro-amarillo22{
-            background-color: #F9C931;
-            width: 100%;
-            height: 90px;
-            padding: 1.75%;
+            background-color: rgb(249, 201, 49);
             border-radius: 10px;
+            height: 90px;
+            padding: 18.75%;
+            width: 247%;
             p{
                 color: #1A1E1E;
                 font-size: 1.5vw;
@@ -60,13 +60,13 @@
             }
         }
         .cuadro-verde22{
-            background-color: #0C8F5A;
-            width: 100%;
-            height: 90px;
-            margin-left: 5%;
-            margin-right: 5%;
-            padding: 0.5% 1.2%;
+            background-color: rgb(12, 143, 90);
             border-radius: 10px;
+            height: 90px;
+            margin-left: 60%;
+            margin-right: 5%;
+            padding: 4% 1.2%;
+            width: 75%;
             p{
                 color: #fff;
                 font-weight: bold;
@@ -74,11 +74,12 @@
             }
         }
         .cuadro-azul22-2{
-            background-color: #7AA0DD;
-            width: 100%;
-            height: 90px;
-            padding: 0% 3%;
+            background-color: #7aa0dd;
             border-radius: 10px;
+            height: 90px;
+            margin-left: 75%;
+            padding: 10% 3%;
+            width: 119%;
             p{
                 color: #002F87;
                 font-size: 1.5vw;
@@ -110,7 +111,6 @@
                 background-color: #FFF2CA;
                 margin:5% 5% 0% 0%;
                 padding: 10%;
-                font-size: 1.7vw;
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
                 .triangulo{
@@ -122,6 +122,7 @@
                 }
                 p{
                     text-align: center;
+                    font-size: 1.5vw;
                 }
             }
         }
@@ -157,7 +158,7 @@
                 }
                 p{
                     text-align: center;
-                    font-size: 1.67vw;
+                    font-size: 1.5vw;
                 }
             }
         }
@@ -194,7 +195,7 @@
                 }
                 p{
                     text-align: center;
-                    font-size: 1.67vw;
+                    font-size: 1.5vw;
                 }
             }
         }
