--- a/src/scss/layouts/_pag12.scss
+++ b/src/scss/layouts/_pag12.scss
@@ -177,6 +177,64 @@
                 @include m.grid(1, 2rem);
             }
 
+            .btn_cuadros12{
+                animation-name: parpadeo;
+                animation-duration: 2s;
+                animation-timing-function: linear;
+                animation-iteration-count: infinite;
+                -webkit-animation-name: parpadeo;
+                -webkit-animation-duration: 2s;
+                -webkit-animation-timing-function: linear;
+                -webkit-animation-iteration-count: infinite;
+
+            }
+
+            .btn_cuadros12:hover{
+                animation-play-state: paused;
+            } 
+
+            @-moz-keyframes parpadeo {
+                0% {
+                  opacity: 1.0;
+                }
+              
+                50% {
+                  opacity: 0.0;
+                }
+              
+                100% {
+                  opacity: 1.0;
+                }
+            }
+              
+            @-webkit-keyframes parpadeo {
+                0% {
+                  opacity: 1.0;
+                }
+              
+                50% {
+                  opacity: 0.0;
+                }
+              
+                100% {
+                  opacity: 1.0;
+                }
+            }
+              
+            @keyframes parpadeo {
+                0% {
+                  opacity: 1.0;
+                }
+              
+                50% {
+                  opacity: 0.0;
+                }
+              
+                100% {
+                  opacity: 1.0;
+                }
+            }
+
 
             #btn-01{
                 position: relative;
