--- a/src/scss/layouts/_pag17.scss
+++ b/src/scss/layouts/_pag17.scss
@@ -1,49 +1,59 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 
-.contenedor1{
+
+
+#cont1-pag17{
+    position: relative;
     display: flex;
+    overflow: hidden;
+    background: v.$colorFuente;
+    height: 20rem;
+
+    @include m.telefono{
+        height: 40rem;
+    }
     .personaje1{
-        position: absolute;
-        height: 200px;
-        padding-left: 10px;
-        z-index: 1;
+        position: relative;
+        height: 100%;
+        width: 10%;
+
         @include m.tablet{
-            height: 150px;
-            margin-top: 6%;
-            margin-left: 1%;
+            width: 15%;
         }
+
         @include m.telefono{
-            height: 150px;
-            margin-top: 12%;
-            margin-left: 0.5%;
-            float: right;
+            position: absolute;
+            height: 15rem;
+            width: 10rem;
+            top: 25rem;
         }
     }
-    .cuadro-negro{
-        margin-top: 5%;
-        font-size: 18px;
-        padding:40px 50px 40px 50.9%;
-        width: 1600px;
-        height: 40%;
-        background-color: #1a1e1e;
-        color: #fff;
-        margin-left: -30%;
-        z-index: -1;
+
+    #metodologia{
+        display: flex;
+        position: relative;
+        text-align: center;
+        @include m.resaltar(v.$blanco,500);
+        width: 70%;
+        height: 50%;
+        top: 5rem;
+        left: 6rem;
+
         @include m.tablet{
-            margin-top: 5px;
-            padding:40px 50px 40px 54.9%;
-            font-size: 16px;
+            top: 3rem;
         }
+
         @include m.telefono{
-            margin-top: 5px;
-            padding:30px 30px 30px 63.5%;
-            font-size: 1.2vh;
-            height: 200px;
-            min-height: 205px;
+            width: 100%;
+            padding: 2rem;
+            left: 0;
+            top: 0;
         }
     }
 }
+
+
 .nivel2{
     max-height: 450px;
     display: flex;
@@ -98,9 +108,7 @@
                 }
             }
             .text-buzon{
-                font-size: 1.35vw;
                 @include m.tablet{
-                    font-size: 1.85vw;
                 }
                 padding: 15px 20px;
                 text-align: center;
@@ -122,10 +130,8 @@
                 height: 70%;
                 max-height: 375px;
                 min-height: 367px;
-                font-size: 1.25vw;
                 padding: 20px 0px 20px 20px;
                 @include m.tablet{
-                    font-size: 1.65vw;
                     height: 70%;
                     width: 80%;
                     max-height: 365px;
@@ -191,7 +197,6 @@
             width: 95%;
             height: 75%;
             min-height: 30px;
-            font-size: 1.1vw;
         }
         @include m.tablet{
             .text-globo{
@@ -199,7 +204,6 @@
                 border-radius: 5px !important;
                 width: 70%;
                 min-width: 350px;
-                font-size: 1.3vw;
                 /*@include m.telefono{
                     width: 30%;
                 }*/
@@ -254,7 +258,6 @@
                 }
             }
             .text-buzon{
-                font-size: 4vw !important;
                 padding: 15px 20px;
                 text-align: center;
                 align-items: center;
@@ -268,7 +271,6 @@
             .text-amarillo{
                 width: 70%;
                 height: 365px;
-                font-size: 3.4vw !important;
                 padding: 20px 0px 20px 20px;
             }
             .persona2{
@@ -316,7 +318,6 @@
                 padding: 2%;
                 margin-top: 5%;
                 height: 5%;
-                font-size: 3vw;
             }
             .text-globo::after{
                 clip-path: polygon(0 0, 20% 70%, 100% 0);
@@ -356,7 +357,6 @@
             color: #1a1e1e;
             text-align: center;
             padding: 3%;
-            font-size: 2vw;
         }
     }
 }
@@ -385,7 +385,6 @@
                         max-height: 90px;
                         padding: 3% 5%;
                         color: #fff;
-                        font-size: 1.5vh;
                     }
                     figure{
                         width: 90%;
