--- a/src/scss/layouts/_pag23.scss
+++ b/src/scss/layouts/_pag23.scss
@@ -227,8 +227,8 @@
             background-size: 75%;
             display: none;
             height: 20%;
-            left: 73.6%;
-            padding: 5% 3%;
+            left: 74.6%;
+            padding: 4% 3%;
             position: absolute;
             width: 16%;
             ul{
@@ -270,6 +270,7 @@
                 width: 90%;
             }
             #Dep1{
+                @include m.parpadeo();
                 //width: 20%;
                 height: 20%;
                 padding: 7% 32%;
