--- a/src/scss/layouts/_pag22.scss
+++ b/src/scss/layouts/_pag22.scss
@@ -48,6 +48,7 @@
         margin-top: 3%;
         text-align: center;
         .cuadro-amarillo22{
+            @include m.parpadeo();
             background-color: rgb(249, 201, 49);
             border-radius: 10px;
             height: 90px;
@@ -105,6 +106,7 @@
                 border-bottom-right-radius: 10px;
             }
             .minicuadro-amarillo{
+                display: none;
                 width: 90%;
                 height:60%;
                 min-height: 400px;
@@ -130,7 +132,7 @@
             display: block;
             width: 35%;
             .minicuadro-claro{
-                display: none;
+                display:none;
                 margin:5% 1% 0% 1%;
                 width: 80%;
                 height: 60%;
@@ -140,6 +142,7 @@
                 border-bottom-right-radius: 10px;
             }
             .minicuadro-verde{
+                display: none;
                 width: 85%;
                 height: 60%;
                 min-height: 400px;
@@ -166,7 +169,7 @@
             display: block;
             width: 35%;
             .minicuadro-claro{
-                display: none;
+                display:none;
                 margin:5% 0% 0% 6%;
                 width: 90%;
                 height: 60%;
@@ -177,6 +180,7 @@
                 z-index: -1;
             }
             .minicuadro-azul{
+                display:none;
                 width: 90%;
                 height: 60%;
                 min-height: 400px;
