--- a/src/scss/layouts/_pag19.scss
+++ b/src/scss/layouts/_pag19.scss
@@ -19,6 +19,7 @@
     height: 30%;
     max-height: 500px;
     padding-top: 2%;
+    font-size: 1.4rem;
     .persona1pag19{
         position: relative;
         height: 90%;
@@ -58,16 +59,13 @@
         margin-left: -12%;
         padding: 1%;
         margin-right: 5%;
-        font-size: 0.8vw;
         font-weight: bold;
         border-radius: 2%;
         @include m.tablet{
-            font-size: 1.7vw;
             padding: 2%;
             height: 60%;
         }
         @include m.telefono{
-            font-size: 2vw;
             height: 50%;
             min-height: 200px;
             margin-bottom: 10%;
@@ -87,7 +85,6 @@
                 color:#E96247 ;
                 p{
                     color: black;
-                    font-size: 0.80vw;
                     font-weight: bold;
                 }
             }
@@ -115,12 +112,10 @@
         background-color: #E4E4E4;
         z-index: 2;
         padding: 1%;
-        font-size: 0.9vw;
         font-weight: bold;
         margin-right: -10%;
         border-radius: 2%;
         @include m.telefono{
-            font-size: 1.5vw;
             height: 50%;
             min-height: 200px;
         }
@@ -244,97 +239,95 @@
 }
 
 .contenido10pag19{
-    margin-top: 4%;
-    background-color: #F1F1F5;
-    height: 40%;
-    min-height: 650px;
-    padding: 1% 0% 1.3% 3%;
-    .contenido11pag19{
-        margin-top: 4%;
-        display: flex;
-        color: #fff;
-        .cuadropag19-naranja{
-            margin-top: 0%;
-            background-color: #E96247;
-            width: 42%;
-            height: 14% !important;
-            padding: 0.2% 0% 0.2% 0%;
+
+    margin-top: 4rem;
+
+    .titulos{
+        @include m.grid(4, 2rem);
+
+        .cuadro-naranja{
+            grid-column: 1/3;
+            padding: 2rem;
+            background: v.$naranja;
+            color: v.$blanco;
+            font-weight: 700;
             text-align: center;
-            border-radius: 8px;
-            font-size: 1.08vw;
+            border-radius: 2rem;
         }
-        .cuadropag19-amarillo{
-            background-color:#F9C931 ;
-            width: 25%;
-            height: 15.5%;
-            padding: 1.5%;
+
+        .cuadro-amarillo{
+            grid-column: 3/4;
+            padding: 2rem;
+            background: v.$amarillo;
+            color: v.$blanco;
+            font-weight: 700;
             text-align: center;
-            margin-left: 3%;
-            margin-right: 3%;
-            border-radius: 8px;
+            border-radius: 2rem;
         }
-        .cuadropag19-azul{
-            background-color: #002F87;
-            width: 25%;
-            height: 15.5%;
-            padding: 1%;
+
+        .cuadro-azul{
+            grid-column: 4/5;
+            padding: 2rem;
+            background: v.$azulRey;
+            color: v.$blanco;
+            font-weight: 700;
             text-align: center;
-            border-radius: 8px;
+            border-radius: 2rem;
         }
     }
-    .contenido12pag19{
-        display: flex;
-        .cuadropag19{
-            height: 360px;
-            margin-right: 2%;
-            margin-top: 10%;
-            text-align: center;
-            align-items: center;
-            padding: 2%;
-            border-bottom-left-radius: 7px;
-            border-bottom-right-radius: 7px;
-            img{
-                position: relative;
-                height: 100px;
-                width: 100px;
-                z-index: 1;
-                margin-top: -40%;
+
+    .cont-cajas{
+        margin-top: 2rem;
+        @include m.grid(4, 2rem);
+
+        .cajas{
+            .cont-imagen{
+                width: 20rem;
+                height: 20rem;
+                margin: 0 auto;
             }
         }
-        .naranja{
-            width: 20%;
-            position: relative;
-            z-index: 2;
-            border: solid 1.5px #E96247;
-            font-size: 0.85vw;
-        }
-        .amarillo{
-            width: 24%;
-            margin-left: 1%;
-            position: relative;
-            z-index: 2;
-            border: solid 1.5px #F9C931;
-            padding:3% 2% 4% 2%;
-            font-size: 1.2vw;
-        }
-        .azul{
-            width: 24%;
-            margin-left: 2.5%;
-            position: relative;
-            z-index: 2;
-            border: solid 1.5px #002F87;
-            padding-top: 3%;
-            font-size: 1.2vw;
+
+        .cont-parrafo{
+            padding: 2rem;
+            text-align: center;
+            height: 30rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-bottom-left-radius: 2rem;
+            border-bottom-right-radius: 2rem;
+
+            &#parrafo1{
+                border: 1px solid v.$naranja;
+            }
+
+            &#parrafo2{
+                border: 1px solid v.$naranja;
+            }
+
+            &#parrafo3{
+                border: 1px solid v.$amarillo;
+            }
+
+            &#parrafo4{
+                border: 1px solid v.$azulRey;
+            }
+
+            p{
+
+            }
         }
     }
+
     .contenido13pag19{
-        margin-top: 5%;
-        width: 95%;
-        align-items: center;
-        height: 30%;
-        background-color:#1A1E1E ;
-        color: #fff;
-        border-radius: 7px;
-        padding: 1%;
+        margin-top: 2rem;
+        text-align: center;
+        padding: 2rem;
+        font-weight: 700;
+        font-size: 1.8rem;
+        color: v.$blanco;
+        background: v.$colorFuente;
+        border-radius: 1rem;
     }
 }
