--- a/src/scss/layouts/_pag18.scss
+++ b/src/scss/layouts/_pag18.scss
@@ -155,3 +155,52 @@
         }
     }
 }
+
+#retroActividad1{
+
+    display: none;
+    background: v.$azul2;
+
+    &.visualizar{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;        
+    }
+
+    @include m.tablet{
+
+    }
+
+    .cont-imagen{
+        width: 30%;
+        margin: 0;
+
+        @include m.tablet{
+            width: 50%;
+            margin: 0 auto;
+            order: 2;   
+        }
+    }
+
+    .cont-mensaje{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+        width: 60%;
+
+        @include m.tablet{
+            width: 90%;
+            margin: 0 auto;
+            order: 1;   
+        }
+
+        p{
+            text-align: center;
+            color: v.$blanco;
+            font-size: 2.4rem;
+            border: 1px solid v.$blanco;
+            padding: 2rem;
+        }
+    }
+}
