--- a/src/scss/layouts/_pag19.scss
+++ b/src/scss/layouts/_pag19.scss
@@ -13,8 +13,16 @@
 
     .tarjetas{
         margin-top: 2rem;
-        height: 40rem;
+        min-height: 40rem;
         @include m.grid(3, 2rem);
+
+        @include m.escritorio{
+            @include m.grid(2, 2rem);
+        }
+
+        @include m.tablet{
+            @include m.grid(1, 2rem);
+        }
 
         .tarjeta{
             border-radius: 1rem;
@@ -23,14 +31,258 @@
 
             &#tarjeta1{
                 background: v.$fondo6;
+
+                @include m.tablet{
+                    grid-column: 1/2;
+                }
             }
 
             &#tarjeta2{
                 background: v.$fondo4;
+
+                @include m.tablet{
+                    grid-column: 1/2;
+                }
             }
 
             &#tarjeta3{
                 background: v.$fondo1;
+
+                @include m.escritorio{
+                    grid-column: 1/3;
+                }
+
+                @include m.tablet{
+                    grid-column: 1/2;
+                }
+            }
+        }
+    }
+
+    #titulo2{
+        margin-top: 2rem;
+        width: 100%;
+        padding: 2rem;
+        background: v.$naranja;
+        color: v.$blanco;
+    }
+
+    #columnas{
+
+        @include m.grid(2, 0);
+
+        @include m.telefono{
+            @include m.grid(1, 0);
+        }
+
+        #columna1{
+            background: v.$fondo2;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-wrap: wrap;
+
+            .cont-imagen{
+                width: 45%;
+                margin: 0;
+
+                @include m.escritorio{
+                    order: 2;
+                }
+            }
+
+            .cuadro{
+                width: 45%;
+                box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+
+                @include m.escritorio{
+                    width: 80%;
+                    order: 1;
+                }
+
+                .titulo{
+                    background: v.$azulRey;
+                }
+
+                .info{
+                    padding: 2rem;
+                    background: v.$blanco;
+
+                    p{
+                        @include m.resaltar(v.$azulRey, 700);
+                    }
+                }
+
+            }
+
+        }
+
+        #columna2{
+
+            #caja1{
+
+                .titulo{
+                    text-align: left;
+                }
+
+                .contenedor1_1{
+
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-wrap: wrap;
+
+                    .cont-globo{
+                        width: 48%;
+                        padding: 2rem;
+
+                        @include m.escritorio{
+                            width: 80%;
+                        }
+
+                        .globo{
+                            @include m.globoNegro(derecha);
+                        }
+                    }
+
+                    .cont-imagen{
+                        width: 48%;
+                        margin: 0;
+                    }
+                }
+            }
+
+            #caja2{
+                padding: 2rem;
+                background: v.$fondo4;
+
+                .globo{
+                    @include m.globoNegro(arriba);
+
+                    &::after{
+                        left: 80%;
+                        top: -15%;
+                    }
+                }
+            }
+        }
+    }
+
+    #cards{
+
+        margin-top: 2rem;
+        background: v.$fondo2;
+        padding: 2rem;
+        @include m.grid(4, 2rem);
+
+        @include m.escritorioHD{
+            @include m.grid(2, 2rem);
+        }
+
+        @include m.telefono{
+            @include m.grid(1, 2rem);
+        }
+
+        .operaciones{
+            grid-column: 1/3;
+
+            @include m.telefono{
+                grid-column: 1/2;
+            }
+
+            .titulo{
+                min-height: 8.5rem;
+                background: v.$naranja;
+                border-radius: 1rem;
+                margin-bottom: 2rem;
+            }
+
+            .columnas{
+                @include m.grid(2, 2rem);
+
+                @include m.telefono{
+                    @include m.grid(1, 2rem);
+                }
+            }
+        }
+
+        .estructuras{
+            grid-column: 3/4;
+
+            @include m.escritorioHD{
+                grid-column: 1/2;
+            }
+
+            .titulo{
+                min-height: 8.5rem;
+                background: v.$amarillo;
+                border-radius: 1rem;
+                margin-bottom: 2rem;
+            }
+        }
+
+        .capacitacion{
+            grid-column: 4/5;
+
+            @include m.escritorioHD{
+                grid-column: 2/3;
+            }
+
+            @include m.telefono{
+                grid-column: 1/2;
+            }
+
+            .titulo{
+                min-height: 8.5rem;
+                background: v.$azulRey;
+                border-radius: 1rem;
+                margin-bottom: 2rem;
+            }
+        }
+
+        .tarjetas1_1{
+
+            .cont-imagen{
+                width: 20rem;
+                height: 20rem;
+                margin: 0 auto;
+            }
+        }
+
+        .info{
+            padding: 2rem;
+            min-height: 35rem;
+            border-bottom-left-radius: 2rem;
+            border-bottom-right-radius: 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+            background: v.$blanco;
+
+            p{
+                text-align: center;
+
+                span{
+                    font-weight: 700;
+                }
+            }
+
+            &#info1{
+                border: 1px solid v.$naranja;
+            }
+            
+            &#info2{
+                border: 1px solid v.$naranja;
+            }
+
+            &#info3{
+                border: 1px solid v.$amarillo;
+            }
+
+            &#info4{
+                border: 1px solid v.$azulRey;
             }
         }
     }
