--- a/src/scss/layouts/_pag20.scss
+++ b/src/scss/layouts/_pag20.scss
@@ -295,3 +295,263 @@
         }
     }
 }
+
+#subtitulo20{
+    margin: 2rem;
+    padding: 2rem;
+    text-align: center;
+    color: v.$azul1;
+}
+
+#pag12{
+    position: relative;
+    @include m.grid(2, 0);
+    display: flex;
+
+    @include m.escritorioHD{
+        height: 70rem;
+    }
+
+    @include m.tablet{
+        @include m.grid(1, 0);
+        height: 100rem;
+    }
+
+    @include m.telefono{
+        height: auto;
+    }
+
+    #cont-01{
+        position: relative;
+        width: 20%;
+        background: v.$naranja;
+
+        @include m.tablet{
+            width: 100%;
+            height: 37rem;
+        }
+
+        .personaje{
+            height: 80%;
+            width: 90%;
+            padding: 2rem 2rem 0 2rem;
+
+            @include m.escritorioHD{
+                width: 100%;
+                height: 70%;
+            }
+
+            @include m.tablet{
+                width: 35%;
+                height: 80%;
+                padding: 1rem 2rem 0 10rem;
+            }
+
+            @include m.telefono{
+                height: 30rem;
+                width: 25rem;
+            }
+        }
+        #clic1-pag12{
+            position: relative;
+            bottom: 4rem;
+            display: flex;
+            text-align: center;
+            padding: 2rem;
+            background: v.$azulClaro1;
+            @include m.resaltar(v.$colorFuente, 400);
+
+            @include m.escritorioHD{
+                bottom: 0;
+                padding: 1rem;
+                top: -1rem;
+                height: 23rem;
+                padding: 4rem;
+            }
+
+            @include m.tablet{
+                height: 10rem;
+            }
+
+            @include m.telefono{
+                top: -2rem;
+            }
+
+            p{
+                @include m.tablet{
+                    position: relative;
+                    left: 10rem;
+                    top: -1rem;
+                }
+
+                @include m.telefono{
+                    width: 20rem;
+                    left: 3rem;
+                    top: -3rem;
+                }
+            }
+            .mano1-pag12{
+                position: relative;
+                top: 2rem;
+                width: 120%;
+                height: 120%;
+
+                @include m.escritorioHD{
+                    left: -3rem;
+                    width: 20rem;
+                    height: 5rem;
+                }
+
+                @include m.tablet{
+                    width: 5rem;
+                    height: 5rem;
+                    left: 5rem;
+                    top: -2rem;
+                }
+
+                @include m.telefono{
+                    left: 0;
+                    width: 5rem;
+                    height: 5rem;
+                }
+            }
+
+        }
+
+    }
+    #cont-02{
+        position: relative;
+        width: 100%;
+        background: v.$azul2;
+
+        .cuadros12{
+            display: none;
+            opacity: 0;
+            transition: all .3s ease;
+        }
+
+        #globo{
+            position: relative;
+            top: 3rem;
+            left: 8rem;
+            width: 80%;
+            @include m.globoNegro(izquierda);
+
+            @include m.escritorioHD{
+                left: 5rem;
+                width: 90%;
+                top: 2rem;
+            }
+            @include m.tablet{
+                left: 0;
+                top: 0;
+                right: 1rem;
+                width: 100%
+            }
+
+            @include m.telefono{
+                width: 34rem;            
+            }
+        }
+
+        #cont-botones{
+            @include m.grid(3, 2rem);
+            position: relative;
+            top: 3rem;
+            padding: 2rem;
+
+            @include m.escritorioHD{
+                @include m.grid(3, 0);
+                top: 2rem;
+            }
+
+            @include m.tablet{
+                top: 0;
+            }
+
+            @include m.telefono{
+                @include m.grid(1, 2rem);
+            }
+
+            .btn_cuadros12:hover{
+                @include m.parpadeo;
+            } 
+
+            #btn-01{
+                position: relative;
+                #btn-aplicar{
+                    padding: 2rem;
+                    margin-left: 2rem;
+
+                    a{
+                        border-radius: 1rem;
+                        border: solid white;
+                        @include m.botones(v.$azulRey);
+                    }
+                }
+
+                #info-seguros{
+                    display: flex;
+                    @include m.resaltar(v.$azulRey, 400);
+                    @include m.cardsPag12(v.$azulRey, v.$azulRey);
+
+
+                    &.cuadros_activos{
+                        display: block;
+                        opacity: 1;
+                    }
+                }
+            }
+
+            #btn-02{
+                position: relative;
+                #btn-seguimiento{
+                    padding: 2rem;
+                    margin-left: 2rem;
+
+                    a{
+                        border-radius: 1rem;
+                        border: solid white;
+                        @include m.botones(v.$verde);
+                    }
+                }
+
+                #info-seguimiento{
+                    display: flex;
+                    @include m.resaltar(v.$verde, 400);
+                    @include m.cardsPag12(v.$verde, v.$verde);
+
+                    &.cuadros_activos{
+                        display: block;
+                        opacity: 1;
+                    }
+                }
+            }
+
+            #btn-03{
+                position: relative;
+                #btn-reportar{
+                    padding: 2rem;
+                    margin-left: 2rem;
+
+                    a{
+                        border-radius: 1rem;
+                        border: solid white;
+                        @include m.botones(v.$verdePag12);
+                    }
+                }
+
+                #info-reportar{
+                    display: flex;
+                    @include m.resaltar(v.$verde, 400);
+                    @include m.cardsPag12(v.$verdePag12, v.$verdePag12);
+
+                    &.cuadros_activos{
+                        display: block;
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+}
