--- a/src/scss/layouts/_pag18.scss
+++ b/src/scss/layouts/_pag18.scss
@@ -65,6 +65,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        
+        figure{
+            height: 50rem;
+        }
 
     }
 
