--- a/src/scss/layouts/_pag26.scss
+++ b/src/scss/layouts/_pag26.scss
@@ -8,7 +8,7 @@
     align-items: center;
 
     @include m.tablet{
-        display: none;
+        font-size: 1.4rem;
     }
 
     .seguro{
@@ -34,77 +34,64 @@
 }
 
 .tablaComparacion{
+
     @include m.grid(2, 0);
 
     @include m.tablet{
         @include m.grid(1, 0);
     }
 
-    .listaSeguro{
-        h1{
-            display: none;
+    .tituloSeguro, .tituloReaseguro{
+        display: none;
+    }
 
-            @include m.tablet{
-                display: block;
-                text-align: center;
-                color: v.$blanco;
-                background: v.$azulRey;
-            }
-        }
-        font-size: 3.2rem;
-        color: v.$azulRey;
+    .elementos{
+        width: 100%;
+        padding: 2rem 8rem;
+        text-align: left;
+        font-size: 2.4rem;
+        font-weight: 700;
 
-        @include m.escritorio(){
+        @include m.escritorioHD(){
+            padding: 2rem 4rem;
             font-size: 1.8rem;
         }
 
-        .caja1, .caja3{
+        &.seguro{
+            color: v.$azulRey;
             background: v.$fondo2;
-            padding: 6rem;
+
+            @include m.tablet{
+                &:nth-of-type(2){
+                    grid-row: 2/3;
+                }
+            }
+
+            ul, ol{
+                li{
+                    margin-left: 6rem;
+                    text-align: left;
+                }
+            }
         }
-        
-        .caja2, .caja4{
-            background: v.$grisFondo4;
-            padding: 6rem;
+
+        &.reaseguro{
+            color: v.$verde;
+
+            ul, ol{
+                li{
+                    margin-left: 6rem;
+                    text-align: left;
+                }
+            }
         }
     }
 
-    .listaReaseguro{
-        h1{
-            display: none;
+    figure{
+        grid-column: 2/3;
 
-            @include m.tablet{
-                display: block;
-                text-align: center;
-                color: v.$blanco;
-                background: v.$verde;
-            }
-        }
-        font-size: 3.2rem;
-        color: v.$verde;
-        display: flex;
-        flex-direction: column;
-
-        @include m.escritorio(){
-            font-size: 1.8rem;
-        }
-
-        .caja1{
-            padding: 6rem;
-        }
-
-        .caja2{
-            padding: 6rem;
-        }
-
-        figure{
-            width: 25rem;
-            height: 35rem;
-            align-self: flex-end;
-
-            @include m.tablet{
-                align-self: center;
-            }
+        @include m.tablet{
+            grid-column: 1/2;
         }
     }
 
